<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.com.group18_hw03.TriviaStats">
<TextView
    android:layout_width="match_parent"
    android:text="@string/lbl_triviaStats"
    android:gravity="center"
    android:textSize="@dimen/fontSize"
    android:textStyle="bold"
    android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/lbl"
        android:textSize="@dimen/fontSize"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/lbl_progress"
            android:textSize="@dimen/fontSize"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:layout_height="wrap_content" />
        <ProgressBar
            android:layout_width="300dp"
            android:id="@+id/progressBar"
            android:layout_marginLeft="50dp"
            android:layout_gravity="center_vertical"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_height="20dp" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/lbl_tryAgain"
        android:id="@+id/text_tryAgain"
        android:layout_gravity="center_vertical"
        android:textSize="@dimen/fontSize"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_quit_stats"
            android:text="@string/quit"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btn_tryAgain"
            android:layout_marginLeft="130dp"
            android:text="@string/tryAgain"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
