<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.com.group18_hw03.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textColor="@color/black"
        android:text="@string/header" />
    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/trivia_img_id"
        android:layout_height="300dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center|bottom"

        android:layout_height="wrap_content">
        <Button
            android:layout_width="160dp"
            android:id="@+id/exit_btn"
            android:layout_marginLeft="20dp"
            android:text="@string/exit"
            android:layout_marginRight="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="160dp"
            android:id="@+id/start_btn"
            android:text="@string/start"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
